# C-Tasks

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Car_Collision_Visulaization/: CMakeLists.txt  main.cpp
Car_Collision_Visulaization/src/: CImg.h  car.cpp  car.h  car_collision.cpp  car_collision.h  data_visualization.cpp  data_visualization.h  visualizer.cpp  visualizer.h
Cars_Collision/: .gitignore  CMakeLists.txt  car  cars  cars_collision.cpp  main.cpp
Cars_Collision/src/: car_collision.cpp  car_collision.h
Data_Visualizer/: CMakeLists.txt  main.cpp
Data_Visualizer/src/: data_visualization.cpp  data_visualization.h
Rapid xml library parsing task/: shellscript.sh
Rapid xml library parsing task/src/mathpractice/src/: rosline.cpp
practice/: new.js
